@@ -18,19 +18,18 @@ class EncryptCapabilityTest extends RandomAwareTestBase
 	EncryptCapability encryptCapability;
 
 	@Test
-	@DisplayName("creates an encrypted capability\n"
-			+ " - generates a reencrypt factor\n"
-			+ " - encrypts the capability associated with the context using the key and the reencrypt factor")
+	@DisplayName("""
+			creates an encrypted capability
+			 - generates a reencrypt factor
+			 - encrypts the capability associated with the context using the key and the reencrypt factor
+			""")
 	void test() {
-		CapabilityEncryption ENCRYPT_CAPABILITY_RESULT = new CapabilityEncryption(
-				ELGAMAL_REENCRYPT_FACTOR_EPRIME,
-				ENCRYPTED_VOTE_CAPABILITIES_WITH_EPRIME.get(0));
 		assertEquals(ENCRYPT_CAPABILITY_RESULT, encryptCapability
 				.apply(EL_GAMAL_PUBLIC_KEY_E, CAPABILITY_MAP, CONTEXT_0));
 		verify(encryptCapability.generateElGamalReencryptFactor)
 				.apply(EL_GAMAL_PARAMETERS);
 		verify(encryptCapability.elGamalEncrypt).apply(EL_GAMAL_PUBLIC_KEY_E,
-				VOTE_CAPABILITIES.get(0), ELGAMAL_REENCRYPT_FACTOR_EPRIME);
+				VOTE_CAPABILITIES.getFirst(), ELGAMAL_REENCRYPT_FACTOR_EPRIME);
 	}
 
 	@Test
